# easy_api_builder

./: LICENSE  MANIFEST  README.md  README.rst  pyproject.toml  setup.py  test.py
easy_api_builder/: APIbuilder.py  __init__.py  builder.py
easy_api_builder/templates/: 404.html  index.html
src/easy_api_builder/: __init__.py  api_builder.py
tests/: test.py
